<resources>
    <string name="app_name">DailyDelivery</string>
    <string name="buisness">Buisness</string>
    <string name="get_started">Get Started</string>
    <string name="Login_description">Your number is safe with us. We won\'t share any details with anyone.</string>
    <string name="nav_draw_open">Open navigation drawer</string>
    <string name="nav_draw_close">Close navigation drawer</string>
    <!--menu items strings start-->
    <string name="earning">Earning</string>
    <string name="myacc">My Account</string>
    <string name="paypaytm">My wallet status</string>
    <string name="payphonep">Customer Refund</string>
    <string name="paygoogle">Employee Salary</string>
    <string name="recentpayment">Recent Payment</string>
    <string name="paymentadjust">Payment Adjusted</string>
    <string name="empsalary">Employee Salary</string>
    <string name="settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="details">Details</string>
    <string name="delete">Delete</string>
    <!--menu item strings end-->

    <!--bussiness fragement strings starts-->
    <string name="customers">Customers</string>
    <!--bussiness fragement strings starts-->

    <string name="facebook_app_id">535536857326543</string>
    <string name="fb_login_protocol_scheme">fb535536857326543</string>
    <string name="signout">Sign out</string>


</resources>
