<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="Accounts">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_home"
                    android:title="Home"/>
                <item
                    android:id="@+id/nav_earning"
                    android:icon="@drawable/ic_rupee"
                    android:title="@string/earning" />
                <item
                    android:id="@+id/nav_account"
                    android:icon="@drawable/menu_user"
                    android:title="@string/myacc" />
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/img_settings"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/nav_signout"
                    android:icon="@drawable/ic_baseline_exit_to_app_24"
                    android:title="@string/signout"
                    />
            </group>
        </menu>
    </item>

    <item android:title="Payments">
        <menu>
            <item
                android:id="@+id/nav_recentpayment"
                android:icon="@drawable/ic_payment"
                android:title="@string/recentpayment" />
            <item
                android:id="@+id/nav_paymentadjust"
                android:icon="@drawable/ic_payment"
                android:title="@string/paymentadjust" />
            <item
                android:id="@+id/nav_empsalary"
                android:icon="@drawable/ic_payment"
                android:title="@string/empsalary" />
        </menu>
    </item>

</menu>